Soy fullstack pa
Co-authored-by: Carolina Blanco <caroblanco@users.noreply.github.com>
Co-authored-by: Ezequiel-H <Ezequiel-H@users.noreply.github.com>
Co-authored-by: belenbusca <belenbusca@users.noreply.github.com>
Co-authored-by: frandom00 <frandom00@users.noreply.github.com>
Co-authored-by: Camila Guillan <camiguillan@users.noreply.github.com>

--- a/Tp/src/main/Front/html/Autorizaciones.html
+++ b/Tp/src/main/Front/html/Autorizaciones.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Delegaciones</title>
-    <link rel="icon" href="../fotos/laLetraD.ico">
+    <link rel="icon" href="../fotos/patitapro.png">
     <style> @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;1,300&display=swap');</style>
     <link rel="stylesheet" href="../css/estilosAutorizaciones.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
