--- a/Tp/src/main/Front/html/ActualizarDatos.html
+++ b/Tp/src/main/Front/html/ActualizarDatos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Patitas</title>
-    <link rel="icon" href="../fotos/laLetraD.ico">
+    <link rel="icon" href="../fotos/patitapro.png">
     <style> @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;1,300&display=swap');</style>
     <link rel="stylesheet" href="../css/estilosActualizarDatos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -131,9 +131,6 @@
                 <a href="notificaciones.html" type="button" class="boton-actualizar">Actualizar datos</a>
           </section>
 
-          <section class="dibujo">
-              <img src="../fotos/actualizarDatos.png" alt="dibujo" width="650px">
-          </section>
 
 
     </main>
