--- a/Tp/src/main/Front/html/registrarPersona.html
+++ b/Tp/src/main/Front/html/registrarPersona.html
@@ -7,7 +7,7 @@
     <title>Registrar</title>
     <link rel="icon" href="../fotos/patitapro.png">
     <style> @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;1,300&display=swap');</style>
-    <link rel="stylesheet" href="../css/estilosRegistro.css">
+    <link rel="stylesheet" href="../css/estilosRegistroPersona.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -45,25 +45,6 @@
         <a href="iniciarSesion.html" type="button" class="header-button">Iniciar sesion</a>
         <a href="registro.html" type="button" class="header-button">Registrarse</a>
       </div>
-
-      <!-- MENU 1
-            <div class="dropbtn" onclick="myFunction(this)">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-        </div>
-      <div class="dropdown">
-        <div id="esta" class="dropbtn" onclick="myFunction(this)">
-          <div class="bar1" onclick="myFunction('esta')"></div>
-          <div class="bar2" onclick="myFunction('esta')"></div>
-          <div class="bar3" onclick="myFunction('esta')"></div>
-        </div>
-        <div id="myDropdown" class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-      </div> -->
     </header>
 
     <main>
@@ -162,6 +143,7 @@
             </fieldset>
 
             <section>
+              
                 <img src="../fotos/undraw_decorative_friends_q2np.png" alt="dibujo" width="350px">
             </section>
           </section>
