arregle las fotos y el menu

--- a/Tp/src/main/Front/html/adoptarPerfil.html
+++ b/Tp/src/main/Front/html/adoptarPerfil.html
@@ -46,13 +46,18 @@
   
   <body>
     <header>
-        <h2>Patitas</h2>
+        <div class="logo">
+          <img src="../fotos/logoBlanco.png" alt="logo" width="5%">
+          <h2>Patitas</h2>
+        </div>
+
         <div class="usuario">
           <div class="usuario-icon">
               <i class="fas fa-user-circle"></i>
           </div>
           <p>Juan Perez</p>
         </div>
+
         <div id="menu2" class="menu2" onclick="openSidebar()">
           <button>
               <i class="fas fa-bars"></i>
@@ -86,8 +91,6 @@
         </div>
     </nav>
 
-
-
     <main>
         <section class="portada">
             <section>
@@ -105,16 +108,16 @@
           <div class="descripcion">
             <h2>SOBRE EDGAR</h2>
             <p>Rem necessitatibus atque vitae excepturi eum esse minus nulla ad corporis obcaecati perferendis porro dignissimos repellat debitis maiores. At vel explicabo praesentium dignissimos nulla laboriosam.
-            Est consequatur corrupti error architecto ab earum mollitia magnam animi fugiat esse deserunt pariatur tempora, qui debitis sequi nesciunt nostrum ducimus, autem aut voluptas. Nulla suscipit nobis aperiam veritatis illum.</p>
+            Est consequatur, autem aut voluptas.</p>
             <br>
             <br>
             <table>
                 <tr>
-                    <th>Nombre:</th>
+                    <th>Apodo:</th>
                     <td>Edgar</td>
                 </tr>
                 <tr>
-                    <th>Genero:</th>
+                    <th>Sexo:</th>
                     <td>Macho</td>
                 </tr>
                 <tr>
@@ -126,6 +129,11 @@
                     <td>Gato</td>
                 </tr>
             </table>
+            <br>
+            <div>
+              <h3>Otras caracteristicas:</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non esse magnam labore ab ex aperiam voluptate dicta cupiditate et quasi.</p>
+            </div>
             <br>
             <br>
             <a href="formularioAdopcion.html" type="button" class="botonAdoptar">Adoptar</a>
