--- a/Tp/src/main/Front/html/adoptar.html
+++ b/Tp/src/main/Front/html/adoptar.html
@@ -19,7 +19,11 @@
 </head>
 <body>
     <header>
-        <h2>Patitas</h2>
+        <div class="logo">
+            <img src="../fotos/logoBlanco.png" alt="logo" width="5%">
+            <h2>Patitas</h2>
+          </div>
+
         <div class="usuario">
           <div class="usuario-icon">
               <i class="fas fa-user-circle"></i>
@@ -50,7 +54,7 @@
                     <a href="encontreUnaMascota.html" type="button" class="boton-menu">ENCONTRE A UNA MASCOTA</a>
                 </section>
                 <section>
-                    <a href="registraTuMascota.html" type="button" class="boton-menu">REGITSTRAR MASCOTA</a>
+                    <a href="registraTMascota.html" type="button" class="boton-menu">REGITSTRAR MASCOTA</a>
                 </section>
                 <section>
                     <a href="iniciarSesion.html" type="button" class="boton-menu">CERRAR SESION</a>
