--- a/Tp/src/main/Front/html/adoptarPerfil.html
+++ b/Tp/src/main/Front/html/adoptarPerfil.html
@@ -82,7 +82,7 @@
                     <a href="encontreUnaMascota.html" type="button" class="boton-menu">ENCONTRE A UNA MASCOTA</a>
                 </section>
                 <section>
-                    <a href="registraTuMascota.html" type="button" class="boton-menu">REGITSTRAR MASCOTA</a>
+                    <a href="registrarMascota.html" type="button" class="boton-menu">REGITSTRAR MASCOTA</a>
                 </section>
                 <section>
                     <a href="iniciarSesion.html" type="button" class="boton-menu">CERRAR SESION</a>
