Hay que revisar todo para acomodar lo anterior con lo nuevo

--- a/Tp/src/main/Front/html/registrarMascota.html
+++ b/Tp/src/main/Front/html/registrarMascota.html
@@ -139,14 +139,13 @@
               <br>
               <br>
               <div>
-                <textarea name="descripcion mascota" rows="10" cols="40">Inserte la descripcion fisica de su mascota aqui ... </textarea>
+                <textarea name="descripcion mascota" rows="10" cols="40"> </textarea>
               </div>
             </fieldset>
 
             <fieldset class="formulario-foto">
               <h3 class="titulos-form">Foto</h3>
-              <img src="../fotos/añadirFoto.jpeg" alt="añadirFoto" width="300px">
-            </fieldset>
+              <img src="../fotos/añadirFoto.jpeg" alt="añadirFoto" width="300px"></fieldset>
           </section>
 
           <section class="usuario-foto">
@@ -156,6 +155,7 @@
                 <select name="selector">
                   <option value="Color ojos">Color ojos</option>
                   <option value="Color pelo">Color pelo</option>
+                  option
                 </select>
                 <input
                   placeholder="Especifique"
@@ -164,8 +164,58 @@
                 />
               </div>
               <br>
+              <div id="caracteristicas">
+                <select name="selector">
+                  <option value="Color ojos">Color ojos</option>
+                  <option value="Color pelo">Color pelo</option>
+                  option
+                </select>
+                <input
+                  placeholder="Especifique"
+                  type="text"
+                  name="caracteristicas"
+                />
+              </div>
               <br>
-              
+              <div id="caracteristicas">
+                <select name="selector">
+                  <option value="Color ojos">Color ojos</option>
+                  <option value="Color pelo">Color pelo</option>
+                  option
+                </select>
+                <input
+                  placeholder="Especifique"
+                  type="text"
+                  name="caracteristicas"
+                />
+              </div>
+              <br>
+              <div id="caracteristicas">
+                <select name="selector">
+                  <option value="Color ojos">Color ojos</option>
+                  <option value="Color pelo">Color pelo</option>
+                  option
+                </select>
+                <input
+                  placeholder="Especifique"
+                  type="text"
+                  name="caracteristicas"
+                />
+              </div>
+              <br>
+              <div id="caracteristicas">
+                <select name="selector">
+                  <option value="Color ojos">Color ojos</option>
+                  <option value="Color pelo">Color pelo</option>
+                  option
+                </select>
+                <input
+                  placeholder="Especifique"
+                  type="text"
+                  name="caracteristicas"
+                />
+              </div>
+              <br>
             </fieldset>
             
             <button class="boton-registrarse" type="submit">Registrar</button>
